--- a/Fermady/src/global.css
+++ b/Fermady/src/global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@600;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rasa:wght@700&display=swap");
 body {
   margin: 0;
   line-height: normal;
@@ -6,43 +7,93 @@ body {
 :root {
   /* fonts */
   --font-nunito: Nunito;
+  --font-rasa: Rasa;
 
   /* font sizes */
   --font-size-5xl: 24px;
   --font-size-lgi: 19px;
-  --font-size-17xl: 36px;
+  --font-size-9xl: 28px;
   --font-size-3xl: 22px;
+  --font-size-xl: 20px;
+  --font-size-base: 16px;
+  --font-size-17xl: 36px;
   --font-size-10xl: 29px;
+  --font-size-61xl: 80px;
   --font-size-21xl: 40px;
-  --font-size-13xl: 32px;
 
   /* Colors */
   --color-ghostwhite-100: #f9f9fd;
   --color-ghostwhite-200: #f6f4f9;
   --color-black: #000;
-  --color-white: #fff;
-  --color-gainsboro-100: #d9d9d9;
-  --color-gainsboro-200: rgba(217, 217, 217, 0);
-  --color-gainsboro-300: rgba(217, 217, 217, 0.5);
-  --color-lavenderblush: #f8efef;
-  --color-chocolate-100: rgba(211, 117, 23, 0.84);
+  --color-gray-200: #161420;
   --color-gray-100: #161414;
+  --color-gray-300: rgba(255, 255, 255, 0);
+  --color-darkslategray: #4a4747;
+  --color-gainsboro-400: #dedbe0;
+  --color-gainsboro-100: #d9d9d9;
+  --color-gainsboro-300: rgba(217, 217, 217, 0.5);
+  --color-chocolate: #d37517;
+  --color-dimgray: #5c6558;
+  --color-white: #fff;
+  --color-blue: #0803f5;
+  --color-lavenderblush: #f8efef;
+  --color-lightgoldenrodyellow: rgba(204, 254, 206, 0.83);
+  --color-lightpink: rgba(251, 186, 186, 0.83);
+  --color-tomato: #f76359;
 
   /* Gaps */
   --gap-xl: 20px;
+  --gap-lg: 18px;
+  --gap-22xl: 41px;
+  --gap-mini: 15px;
+  --gap-17xl: 36px;
+  --gap-11xl: 30px;
+  --gap-mid: 17px;
+  --gap-31xl: 50px;
+  --gap-30xl: 49px;
 
   /* Paddings */
   --padding-12xs: 1px;
   --padding-xl: 20px;
+  --padding-lg: 18px;
+  --padding-62xl: 81px;
+  --padding-base-3: 16.3px;
+  --padding-mid-1: 17.1px;
+  --padding-mid-2: 17.2px;
+  --padding-7xl: 26px;
+  --padding-base: 16px;
+  --padding-8xl: 27px;
+  --padding-12xl: 31px;
+  --padding-3xl: 22px;
+  --padding-13xl: 32px;
+  --padding-36xl: 55px;
+  --padding-35xl: 54px;
   --padding-17xl: 36px;
+  --padding-10xl: 29px;
+  --padding-4xl: 23px;
+  --padding-18xl: 37px;
+  --padding-2xl: 21px;
+  --padding-mid: 17px;
   --padding-3xs: 10px;
-  --padding-5xs: 8px;
+  --padding-152xl: 171px;
+  --padding-108xl: 127px;
+  --padding-44xl: 63px;
+  --padding-66xl: 85px;
+  --padding-23xl: 42px;
+  --padding-4xs: 9px;
+  --padding-52xl: 71px;
+  --padding-544xl: 563px;
+  --padding-32xl: 51px;
+  --padding-6xl: 25px;
+  --padding-31xl: 50px;
+  --padding-19xl: 38px;
+  --padding-54xl: 73px;
   --padding-9xl: 28px;
   --padding-sm: 14px;
-  --padding-18xl: 37px;
-  --padding-62xl: 81px;
 
   /* Border radiuses */
-  --br-10xl: 29px;
   --br-31xl: 50px;
+  --br-lg: 18px;
+  --br-11xl: 30px;
+  --br-8xs: 5px;
 }
