--- a/Fermady/src/pages/desktop.css
+++ b/Fermady/src/pages/desktop.css
@@ -1,4 +1,23 @@
-.frame-inner {
+.volver2 {
+  align-self: stretch;
+  height: 25px;
+  position: relative;
+  font-weight: 900;
+  display: inline-block;
+  flex-shrink: 0;
+  cursor: pointer;
+  z-index: 1;
+}
+.navigation-area {
+  width: 123px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: var(--padding-2xl) 0 0;
+  box-sizing: border-box;
+}
+.vector-icon {
   height: 89.1px;
   width: 1432px;
   position: absolute;
@@ -6,94 +25,161 @@
   bottom: -23.3px;
   left: -506px;
 }
-.tracking-de-precios {
+.tracking-de-precios1 {
   height: 43px;
+  flex: 1;
   position: relative;
   font-weight: 800;
   display: inline-block;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   z-index: 1;
 }
-.f-r-a-m-e-a,
-.vector-group {
+.page-layout,
+.vector-container {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   max-width: 100%;
 }
-.vector-group {
+.vector-container {
+  width: 421px;
   justify-content: flex-start;
   position: relative;
+  font-size: var(--font-size-17xl);
+  color: var(--color-lavenderblush);
 }
-.f-r-a-m-e-a {
-  width: 1251px;
-  justify-content: center;
+.page-layout {
+  width: 866px;
+  justify-content: space-between;
+  gap: var(--gap-xl);
 }
 .el-gallo-mas,
-.rectangle-div {
+.frame-child4 {
   position: relative;
   max-width: 100%;
+  z-index: 1;
 }
-.rectangle-div {
-  height: 550px;
+.frame-child4 {
   width: 1262px;
+  height: 550px;
+  border-radius: var(--br-11xl);
   background-color: var(--color-gainsboro-300);
   display: none;
 }
 .el-gallo-mas {
-  height: 51px;
   width: 349px;
+  font-size: var(--font-size-17xl);
   font-weight: 800;
+  font-family: var(--font-nunito);
+  color: var(--color-black);
+  text-align: center;
   display: inline-block;
-  flex-shrink: 0;
+}
+.button-shape {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: var(--br-31xl);
+  background-color: var(--color-blue);
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+.aadir {
+  position: absolute;
+  top: 18.2px;
+  left: 43.4px;
+  font-size: var(--font-size-17xl);
+  display: flex;
+  font-family: var(--font-rasa);
+  color: var(--color-ghostwhite-100);
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  width: 124.1px;
+  height: 28.7px;
+  min-width: 124.1px;
   z-index: 1;
 }
-.desktop-4,
-.rectangle-parent {
+.btn-aadir {
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  width: 210px;
+  height: 65px;
+  position: absolute;
+  margin: 0 !important;
+  top: 32px;
+  right: 103px;
+  z-index: 2;
+}
+.group-form {
+  margin: 0;
+  flex: 1;
+  border-radius: var(--br-11xl);
+  background-color: var(--color-gainsboro-300);
+  flex-direction: column;
+  padding: var(--padding-10xl) var(--padding-2xl) 48px;
+  position: relative;
+  max-width: 100%;
+}
+.group-form,
+.tracking-gmg,
+.tracking-gmg-inner {
   display: flex;
+  align-items: flex-start;
   justify-content: flex-start;
   box-sizing: border-box;
-  text-align: center;
-  font-size: var(--font-size-17xl);
-  font-family: var(--font-nunito);
 }
-.rectangle-parent {
+.tracking-gmg-inner {
   align-self: stretch;
-  background-color: var(--color-gainsboro-300);
   flex-direction: row;
-  align-items: flex-start;
-  padding: 31px var(--padding-17xl);
-  min-height: 550px;
+  padding: 0 var(--padding-7xl) 0 24px;
   max-width: 100%;
-  color: var(--color-black);
 }
-.desktop-4 {
+.tracking-gmg {
   width: 100%;
   position: relative;
-  background-color: var(--color-white);
+  background: linear-gradient(180deg, #a5a2a2, #999 48.5%);
   overflow: hidden;
   flex-direction: column;
-  align-items: flex-end;
-  padding: 13px 58px 64px 46px;
-  gap: 50px;
+  padding: 13px var(--padding-8xl) var(--padding-31xl);
+  gap: 61px;
+  line-height: normal;
   letter-spacing: normal;
-  color: var(--color-lavenderblush);
+  text-align: center;
+  font-size: 15px;
+  color: var(--color-white);
+  font-family: var(--font-nunito);
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1050px) {
+  .aadir,
   .el-gallo-mas,
-  .tracking-de-precios {
+  .tracking-de-precios1 {
     font-size: var(--font-size-10xl);
   }
-  .desktop-4 {
-    gap: 25px 50px;
-    padding-left: 23px;
-    padding-right: 29px;
+}
+@media screen and (max-width: 750px) {
+  .page-layout {
+    flex-wrap: wrap;
+  }
+  .group-form {
+    padding-top: var(--padding-xl);
+    padding-bottom: var(--padding-12xl);
     box-sizing: border-box;
+  }
+  .tracking-gmg {
+    gap: var(--gap-11xl);
   }
 }
 @media screen and (max-width: 450px) {
+  .aadir,
   .el-gallo-mas,
-  .tracking-de-precios {
+  .tracking-de-precios1 {
     font-size: var(--font-size-3xl);
+  }
+  .tracking-gmg {
+    gap: var(--gap-mini);
   }
 }
